ch unit fallback size doesn't match the spec https://bugs.webkit.org/show_bug.cgi?id=236073 <rdar://problem/88513297>

Reviewed by Cameron McCormack.

Source/WebCore:

The spec (https://drafts.csswg.org/css-values-4/#ch) says:
> In the cases where it is impossible or impractical to determine the measure of the â0â glyph, it must be assumed to be 0.5em wide

Test: fast/text/ch-unit-without-zero-glyph.html

* css/CSSPrimitiveValue.cpp:
(WebCore::CSSPrimitiveValue::computeUnzoomedNonCalcLengthDouble):
(WebCore::CSSPrimitiveValue::computeNonCalcLengthDouble):
* platform/graphics/Font.cpp:
(WebCore::Font::platformGlyphInit):
* platform/graphics/FontMetrics.h:
(WebCore::FontMetrics::zeroWidth const):
(WebCore::FontMetrics::reset):

LayoutTests:

This can't be a WPT test because it uses an SVG font which we're the only browser to support.

* fast/text/ch-unit-without-zero-glyph-expected.html: Added.
* fast/text/ch-unit-without-zero-glyph.html: Added.



Canonical link: https://commits.webkit.org/246847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289151 268f45cc-cd09-0410-ab3c-d52691b4dbfc