Source/WebCore/platform/graphics/FontMetrics.h
@@ -119,7 +119,7 @@ public:
         return ascent() == other.ascent() && descent() == other.descent() && lineGap() == other.lineGap();
     }
 
-    float zeroWidth() const { return m_zeroWidth; }
+    std::optional<float> zeroWidth() const { return m_zeroWidth; }
     void setZeroWidth(float zeroWidth) { m_zeroWidth = zeroWidth; }
 
     float ideogramWidth() const { return m_ideogramWidth; }
@@ -148,7 +148,7 @@ private:
         m_intLineSpacing = 0;
         m_intCapHeight = 0;
         m_xHeight = 0;
-        m_zeroWidth = 0;
+        m_zeroWidth = std::nullopt;
         m_ideogramWidth = 0;
         m_underlinePosition = 0;
         m_underlineThickness = 0;
@@ -169,7 +169,7 @@ private:
     int m_intLineSpacing { 0 };
     int m_intCapHeight { 0 };
 
-    float m_zeroWidth { 0 };
+    std::optional<float> m_zeroWidth;
     float m_ideogramWidth { 0 };
     float m_xHeight { 0 };
     float m_underlinePosition { 0 };
